--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "^20.1.4",
+    "@types/prettier": "^2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "18.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -30,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.4",
     "vite": "^4.3.2"
   },
