--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "packageManager": "yarn@3.5.1"
 }
