--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/prettier": "^2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "18.2.0",
+    "@types/react-router": "^5.1.20",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "latest",
     "@vitejs/plugin-react": "^4.0.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.8",
+    "react-router": "^6.11.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.2",
     "vite-plugin-svgr": "^3.2.0"
