--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.26",
     "@yarnpkg/plugin-typescript": "^4.0.0-rc.43",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
