--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-router-dom": "^6.11.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
-    "styled-components": "^6.0.0-rc.1",
-    "swiper": "6.8.4"
+    "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "^20.1.4",
