--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@yarnpkg/plugin-typescript": "^4.0.0-rc.43",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "recoil": "^0.7.7",
