--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "custom.d.ts"],
+  "exclude": ["**/*.spec.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
