fix : styled.d.ts 제외

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "custom.d.ts"],
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.style.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
